--- a/SuperEconomicoApp/Views/AccountUserView.xaml
+++ b/SuperEconomicoApp/Views/AccountUserView.xaml
@@ -223,18 +223,13 @@
                                HorizontalOptions="Start" 
                                VerticalOptions="Center"
                                Aspect="AspectFit"
-                               HeightRequest="20">
-                            <Image.GestureRecognizers>
-                                <TapGestureRecognizer Command="{Binding LogoutCommand}"/>
-                            </Image.GestureRecognizers>
-                        </Image>
+                               HeightRequest="20" />
 
                         <Button 
                             Text="Cerrar Sesion" 
                             BackgroundColor="Transparent"
                             FontSize="Small"
                             x:Name="btnExit"
-                            Command="{Binding LogoutCommand}"
                             CornerRadius="20"
                             Padding="0"
                             HorizontalOptions="Center"/>
@@ -242,14 +237,13 @@
                                HorizontalOptions="EndAndExpand" 
                                VerticalOptions="Center"
                                Aspect="AspectFit"
-                               HeightRequest="20">
-                            <Image.GestureRecognizers>
-                                <TapGestureRecognizer Command="{Binding LogoutCommand}"/>
-                            </Image.GestureRecognizers>
-                        </Image>
+                               HeightRequest="20"/>
 
                     </StackLayout>
                 </Frame>
+                <StackLayout.GestureRecognizers>
+                    <TapGestureRecognizer Command="{Binding LogoutCommand}"/>
+                </StackLayout.GestureRecognizers>
             </StackLayout>
         </StackLayout>
 
